change public boolean

--- a/ops.yml
+++ b/ops.yml
@@ -5,7 +5,7 @@ ops:
     description: # Short description for what your op does (required)
       An Op to simplify an opinionated Github workflow.
     public: # Determines whether this version of the op is visible to other people
-      false
+      true
     sourceCodeURL: ""
     run: # Command that is executed when op is started ("npm start", "./start_script.sh", etc.) (required)
       node /ops/lib/index.js
