--- a/ops.yml
+++ b/ops.yml
@@ -14,7 +14,9 @@ ops:
       # To use environment variables from the Host, use the $ prefix:
       - TERM=xterm-256color
       - GITHUB_TEST_TOKEN=$GITHUB_TEST_TOKEN
-      - GITHUB_TEST_REPO_URL=$GITHUB_TEST_REPO_URL
+      - GITHUB_TEST_TARGET=$GITHUB_TEST_TARGET
+      - EXISTING_USER_NAME=$EXISTING_USER_NAME
+      - EXISTING_USER_PASSWORD=$EXISTING_USER_PASSWORD
     src: # Whitelist files and folders to be included in the published op's WORKDIR
       - src
       - Dockerfile
