--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "@cto.ai/sdk": "^1.5.1",
+    "@cto.ai/inquirer": "^6.4.4",
+    "@cto.ai/sdk": "^2.0.4",
     "@octokit/rest": "^16.25.5",
     "debug": "^4.1.1",
     "fs-extra": "^8.0.1",
@@ -39,6 +40,7 @@
     "path": "^0.12.7",
     "simple-git": "^1.113.0",
     "strip-ansi": "^5.2.0",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "yargs": "^15.1.0"
   }
 }
