--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,11 @@
     "module": "commonjs",
     "target": "ESNext",
     "outDir": "lib/",
-    "rootDir": "src/",
-    "lib": ["es2015", "esnext"],
+    "rootDir": "./",
+    "lib": [
+      "es2015",
+      "esnext"
+    ],
     "sourceMap": true,
     "esModuleInterop": true
   }
