--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "author": "CTO.ai",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/cto-ai/github.git"
+  },
   "devDependencies": {
     "@types/concat-stream": "^1.6.0",
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
-    "child_process": "^1.0.2",
     "concat-stream": "^2.0.0",
-    "fs": "0.0.1-security",
     "jest": "^24.9.0",
     "npm": "^6.13.4",
     "prettier": "^1.19.1",
@@ -28,16 +30,16 @@
   },
   "dependencies": {
     "@cto.ai/sdk": "^2.0.4",
-    "@octokit/rest": "^16.25.5",
+    "@octokit/rest": "^16.36.0",
     "debug": "^4.1.1",
-    "fs-extra": "^8.0.1",
+    "fs-extra": "^8.1.0",
     "fuzzy": "^0.1.3",
     "git-branch": "^2.0.1",
     "is-docker": "^2.0.0",
     "parse-git-config": "^3.0.0",
     "path": "^0.12.7",
-    "simple-git": "^1.113.0",
-    "strip-ansi": "^5.2.0",
+    "simple-git": "^1.129.0",
+    "strip-ansi": "^6.0.0",
     "ts-node": "^8.5.4",
     "yargs": "^15.1.0"
   }
